fix alignment

--- a/src/style.scss
+++ b/src/style.scss
@@ -84,7 +84,7 @@ $td: '[role="cell"]';
       padding: 0;
     }
 
-    svg {
+    span {
       float: right;
       vertical-align: middle;
     }
